# A1HelloWorldQt

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md
